Make TOC box more viewable in dark mode. Fix search box hover behavior.

--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -33,6 +33,13 @@
         height: 1.2rem;
         margin: .9rem .6rem;
     }
+    @media screen and (min-width: 60em) {
+        .md-search__form:hover {
+            background-color: #00000042;
+            border-radius: .1rem;
+            height: 1.8rem;
+        }
+    }
     .md-nav--primary .md-nav__title {
         background-color: #FFFFFF;
         color: #000000;
@@ -64,6 +71,7 @@
     --md-default-fg-color--lightest: #FFFFFF;
     --md-primary-fg-color: #825DFF;
     --md-typeset-color: #FFFFFF;
+    --md-typeset-table-color: #ffffffb8;
 
     .md-header {
         background-color: hsla(var(--md-hue),15%,8%,1);
@@ -86,6 +94,9 @@
     @media screen and (min-width: 60em) {
         .md-search__form {
             background-color: #ffffff1f;
+        }
+        .md-nav--secondary .md-nav__title {
+            box-shadow: none;
         }
     }
     [data-md-toggle=search]:checked~.md-header .md-search__form {
